# EmbeddedLapack

./: CMakeLists.txt
EmbeddedLapack/: CMakeLists.txt
EmbeddedLapack/src/: CMakeLists.txt  main.c
EmbeddedLapack/src/Lapack/Blas/: dgemm.c
